FIX: Main banner covering navbar links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,11 +47,6 @@ body {
     font-size: 1rem;
 }
 
-.landing-banner-desktop {
-    position: relative;
-    top: -80px;
-}
-
 h1 {
     font-family: 'Zilla Slab', serif;
     font-weight: 600;
@@ -96,6 +91,8 @@ nav {
     width: 75%;
     margin: auto;
     margin-top: 15px;
+    z-index: 1;
+    position: relative;
 }
 
 .logo {
@@ -208,6 +205,11 @@ h4 span {
 }
 
 /* Landing page */
+
+.landing-banner-desktop {
+    position: relative;
+    top: -80px;
+}
 
 .button-banner-signup {
     border: 2px solid #244846;
